--- a/Nodeserver/package.json
+++ b/Nodeserver/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     
-    "start":"node NodeSever/index.js"
+    "start":"node Nodeserver/index.js"
   },
   "author": "Bablu",
   "license": "ISC",
